--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,22 @@
+# Java Packages
 *.class
-
-# Package Files #
 *.jar
 *.war
 *.ear
+
+# Eclipse
+.classpath
+.project
+.settings/
+
+# Intellij
+.idea/
+*.iml
+*.iws
+
+# Mac
+.DS_Store
+
+# Maven
+log/
+target/
