--- a/haskell/cabal.sandbox.config
+++ b/haskell/cabal.sandbox.config
@@ -8,18 +8,18 @@ local-repo: /Users/stites/git/pe/haskell/.cabal-sandbox/packages
 logs-dir: /Users/stites/git/pe/haskell/.cabal-sandbox/logs
 world-file: /Users/stites/git/pe/haskell/.cabal-sandbox/world
 user-install: False
-package-db: /Users/stites/git/pe/haskell/.cabal-sandbox/x86_64-osx-ghc-7.8.3-packages.conf.d
+package-db: /Users/stites/git/pe/haskell/.cabal-sandbox/x86_64-osx-ghc-7.10.2-packages.conf.d
 build-summary: /Users/stites/git/pe/haskell/.cabal-sandbox/logs/build.log
 
-install-dirs 
+install-dirs
   prefix: /Users/stites/git/pe/haskell/.cabal-sandbox
   bindir: $prefix/bin
   libdir: $prefix/lib
-  libsubdir: $arch-$os-$compiler/$pkgid
+  libsubdir: $abi/$libname
   libexecdir: $prefix/libexec
   datadir: $prefix/share
-  datasubdir: $arch-$os-$compiler/$pkgid
-  docdir: $datadir/doc/$arch-$os-$compiler/$pkgid
+  datasubdir: $abi/$pkgid
+  docdir: $datadir/doc/$abi/$pkgid
   htmldir: $docdir/html
   haddockdir: $htmldir
   sysconfdir: $prefix/etc
